--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   "minimum-stability": "stable",
   "require": {
     "php": "^7.0",
-    "illuminate/support": "~5.5.0"
+    "illuminate/support": "^5.0"
   },
   "autoload": {
     "psr-4": {
