--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,9 @@
   "license": "GPL-3.0",
   "authors": [
     {
-      "name": "hatamiarash7",
-      "email": "hatamiarash7@gmail.com"
+      "name": "Arash Hatami",
+      "email": "hatamiarash7@gmail.com",
+      "homepage": "https://github.com/hatamiarash7"
     }
   ],
   "minimum-stability": "stable",
@@ -14,10 +15,23 @@
     "php": "^7.0",
     "illuminate/support": "^5.0"
   },
+  "require-dev": {
+    "phpunit/phpunit": "^7.0",
+    "orchestra/testbench": "^3.5"
+  },
   "autoload": {
     "psr-4": {
       "Hatamiarash7\\JDF\\": "src/"
     }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Hatamiarash7\\JDF\\Test\\": "tests/"
+    }
+  },
+  "suggest": {
+    "laravel/framework": "Required for testing (~5.8).",
+    "phpunit/phpunit": "Allow to use PHPUnit for testing (~7.0)."
   },
   "extra": {
     "laravel": {
@@ -25,5 +39,12 @@
         "Hatamiarash7\\JDF\\JDFServiceProvider"
       ]
     }
+  },
+  "config": {
+    "sort-packages": true,
+    "optimize-autoloader": true
+  },
+  "support": {
+    "issues": "https://github.com/hatamiarash7/Laravel-JDF/issues"
   }
 }
