--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,1 +1,2 @@
-custom: https://idpay.ir/hatamiarash7
+ko_fi: hatamiarash7
+custom: ['https://yekpay.me/hatamiarash7', 'https://idpay.ir/hatamiarash7']
