--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
   "minimum-stability": "stable",
   "require": {
     "php": "^7.0",
-    "illuminate/support": "^6.0"
+    "illuminate/support": "^5.5|^6|^7"
   },
   "require-dev": {
     "phpunit/phpunit": "^7.0",
