--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
   "autoload": {
     "psr-4": {
       "Hatamiarash7\\JDF\\": "src"
-    }
+    },
+    "classmap": []
   },
   "autoload-dev": {
     "psr-4": {
